# jcl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PLAYGROUND.md  README.md  SECURITY.md  WASM_README.md  build.rs  clippy.toml  grammar.pest  playground.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: auto-tag-release.yml  build.yml  dependabot-auto-merge.yml  lint.yml  pages.yml  release.yml  test-build-packages.yml  test.yml
bindings/go/: README.md  go.mod  jcl.go
bindings/java/: Cargo.toml  JCL.java  README.md  pom.xml
bindings/nodejs/: README.md  index.d.ts  package.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/ruby/: Cargo.toml  README.md  jcl.gemspec
bindings/ruby/ext/jcl/: extconf.rb
bindings/ruby/lib/: jcl.rb
docs/: COMPARISON.md  FUNCTIONS.md  GETTING_STARTED.md  Gemfile  LANGUAGE_SPEC.md  MATRIX_CONFIG.md  README.md  SCRIPT_GENERATION.md  _config.yml  index.md
docs/bindings/: python.md
docs/getting-started/: index.md
docs/guides/: comparison.md  ffi.md  for-loops.md  index.md  lsp.md  playground.md  templating.md  wasm-example.html  wasm.md
docs/reference/: cli-tools.md  design.md  functions.md  index.md  language-spec.md  syntax-v1.md  syntax-v2.md  syntax-v3.md
editors/vim/: README.md
editors/vim/ftdetect/: jcl.vim
editors/vim/syntax/: jcl.vim
editors/vscode/: README.md  language-configuration.json  package.json  test.jcl
editors/vscode/syntaxes/: jcl.tmLanguage.json
examples/: README.md  api-config.jcl  basic.jcf  basic.jcl  builtin.jcf  builtin.jcl  collections.jcl  conditionals.jcf  conditionals.jcl  data-processing.jcf  data-processing.jcl  for-each-examples.jcf  functions-showcase.jcf  functions.jcl  language-showcase.jcf  matrix-config.jcf  pipelines.jcf  script-generation.jcl  simple.jcf  strings.jcl  templating-examples.jcf  web-app-config.jcf  web-server.jcf
examples/aws/: simple-ec2.jcf
examples/basic/: hello.jcf  hello.jcl
examples/c/: example.c
examples/migration/: config.json  config.toml  config.yaml
examples/schema/: app-config.schema.yaml  invalid-config.jcf  valid-config.jcf
examples/web-app/: main.jcf
extensions/vscode/: README.md  extension.js  language-configuration.json  package.json
extensions/vscode/syntaxes/: jcl.tmLanguage.json
include/: jcl.h
linguist-samples/: README.md  config.jcf  functions.jcf  kubernetes.jcf
linguist-submission/: README.md  languages.yml
pkg/: jcl.d.ts  jcl.js  jcl_bg.wasm  jcl_bg.wasm.d.ts
scripts/: README.md  build-ffi.sh  build-wasm.sh  install-hooks.sh  pre-commit
src/: ast.rs  cache.rs  cli.rs  docgen.rs  error.rs  evaluator.rs  ffi.rs  formatter.rs  functions.rs  grammar.pest  lexer.pest  lexer.rs  lib.rs  linter.rs  lsp.rs  main.rs  migration.rs  module_registry.rs  module_source.rs  parser.rs  planner.rs  providers.rs  repl.rs  schema.rs  state.rs  symbol_table.rs  token_parser.rs  types.rs  wasm.rs
src/bindings/: ffi.rs  java.rs  mod.rs  nodejs.rs  python.rs  ruby.rs  wasm.rs
tests/: cli_tests.rs  integration_tests.rs
