[package]
name = "jcl"
version = "1.0.0"
edition = "2021"
authors = ["Hemmer IO <info@hemmer.io>"]
description = "Jack-of-All Configuration Language - A general-purpose configuration language with powerful built-in functions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hemmer-io/jcl"
readme = "README.md"
keywords = ["configuration", "config", "parser", "language", "template"]
categories = ["command-line-utilities", "development-tools", "config", "parser-implementations"]

[dependencies]
# Parsing
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# CLI (not available in WASM)
clap = { version = "4.4", features = ["derive", "color", "suggestions"], optional = true }
rustyline = { version = "14.0", optional = true }
glob = { version = "0.3", optional = true }
notify = { version = "6.1", optional = true }

# Terminal colors (used by error formatting)
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (not available in WASM)
tokio = { version = "1.35", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# LSP (not available in WASM)
tower-lsp = { version = "0.20", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph algorithms (for dependency resolution)
petgraph = "0.8"

# Templating
handlebars = "6.3"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }

# Encoding/Hashing
base64 = "0.22"
md5 = "0.8"
sha1 = "0.10"
sha2 = "0.10"
urlencoding = "2.1"

# Date/Time
chrono = "0.4"

# Lazy static
lazy_static = "1.5"

# Regular expressions (for schema validation)
regex = "1.10"

# Caching
lru = "0.16"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Testing utilities (needed by benchmarking tool)
tempfile = { version = "3.8", optional = true }

# WebAssembly
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"], optional = true }

# Java bindings
jni = { version = "0.21", optional = true }

# Ruby bindings
magnus = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.6", features = ["v4", "serde", "js"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.7"
proptest = "1.4"
wasm-bindgen-test = "0.3"
tempfile = "3.8"

[features]
default = ["cli"]
cli = ["clap", "rustyline", "glob", "notify", "tokio", "futures", "tower-lsp", "uuid", "tempfile"]
wasm = ["console_error_panic_hook", "wee_alloc", "uuid"]
ffi = ["uuid"]
python = ["pyo3", "uuid"]
nodejs = ["neon", "uuid"]
java = ["jni", "uuid"]
ruby = ["magnus", "uuid"]

[[bin]]
name = "jcl-cli"
path = "src/main.rs"

[[bin]]
name = "jcl-lsp"
path = "src/bin/jcl-lsp.rs"

[[bin]]
name = "jcl-validate"
path = "src/bin/jcl-validate.rs"
required-features = ["cli"]

[[bin]]
name = "jcl-migrate"
path = "src/bin/jcl-migrate.rs"
required-features = ["cli"]

[[bin]]
name = "jcl-fmt"
path = "src/bin/jcl-fmt.rs"
required-features = ["cli"]

[[bin]]
name = "jcl-watch"
path = "src/bin/jcl-watch.rs"
required-features = ["cli"]

[[bin]]
name = "jcl-bench"
path = "src/bin/jcl-bench.rs"
required-features = ["cli"]

[lib]
name = "jcl"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
