[package]
name = "jcl-java"
version = "1.0.0"
edition = "2021"
authors = ["Hemmer IO <info@hemmer.io>"]
description = "Java (JNI) bindings for JCL (Jack-of-All Configuration Language)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hemmer-io/jcl"

[lib]
crate-type = ["cdylib"]
name = "jcl_java"

[dependencies]
jcl = { path = "../..", version = "1.0.0" }
jni = "0.21"
serde_json = "1.0"
