[package]
name = "jcl-python"
version = "1.1.0"
edition = "2021"
authors = ["Hemmer IO <info@hemmer.io>"]
description = "Python bindings for JCL (Jack-of-All Configuration Language)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hemmer-io/jcl"

[lib]
name = "jcl"
crate-type = ["cdylib"]

[dependencies]
jcl = { path = "../..", version = "1.1.0" }
pyo3 = { version = "0.20", features = ["extension-module"] }
serde_json = "1.0"

[features]
default = []
