[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jcl"
version = "0.1.0"
description = "Jack-of-All Configuration Language - Python bindings"
readme = "PYTHON_README.md"
requires-python = ">=3.7"
license = {text = "MIT OR Apache-2.0"}
keywords = ["configuration", "infrastructure", "iac", "devops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/turner-hemmer/jcl"
Repository = "https://github.com/turner-hemmer/jcl"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "jcl"
