[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jcl-lang"
version = "1.2.0"
description = "Jack-of-All Configuration Language - A general-purpose configuration language with powerful built-in functions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Hemmer IO", email = "info@hemmer.io"}
]
keywords = ["configuration", "config", "parser", "language", "template"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://hemmer-io.github.io/jcl/"
Documentation = "https://hemmer-io.github.io/jcl/"
Repository = "https://github.com/hemmer-io/jcl"
Issues = "https://github.com/hemmer-io/jcl/issues"
Changelog = "https://github.com/hemmer-io/jcl/blob/main/CHANGELOG.md"

[tool.maturin]
module-name = "jcl"
