[package]
name = "jcl-ruby"
version = "1.0.0"
edition = "2021"
authors = ["Hemmer IO <info@hemmer.io>"]
description = "Ruby bindings for JCL (Jack-of-All Configuration Language)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hemmer-io/jcl"

[lib]
crate-type = ["cdylib"]
name = "jcl"

[dependencies]
jcl = { path = "../..", version = "1.0.0" }
magnus = "0.6"
serde_json = "1.0"

[package.metadata.rb_sys]
required_ruby_version = ">= 2.7.0"
